[build-system]
requires = [
    "setuptools"
]
build-backend = "setuptools.build_meta"

[project]
name = "pyasn1_modules"
license.text = "BSD-2-Clause"  # Replace with 'project.license' once Python 3.8 is dropped
description = "A collection of ASN.1-based protocols modules"
readme = "README.md"
authors = [{ name = "Ilya Etingof", email = "etingof@gmail.com" }]
maintainers = [
    { name = "pyasn1 maintenance organization" },
    { name = "Christian Heimes", email = "christian@python.org" },
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Telecommunications Industry",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Communications",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pyasn1>=0.6.1,<0.7.0",
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/pyasn1/pyasn1-modules"
"Source" = "https://github.com/pyasn1/pyasn1-modules"
"Issues" = "https://github.com/pyasn1/pyasn1-modules/issues"
"Changelog" = "https://github.com/pyasn1/pyasn1-modules/blob/master/CHANGES.txt"

[tool.setuptools]
license-files = ["LICENSE.txt"]  # Replace with 'project.license-files' once Python 3.8 is dropped

[tool.setuptools.dynamic]
version = { attr = "pyasn1_modules.__version__" }

[tool.setuptools.packages.find]
include = ["pyasn1_modules*"]
